--- a/.github/workflows/podman_containers.yml
+++ b/.github/workflows/podman_containers.yml
@@ -3,36 +3,36 @@ name: Podman multi-containers
 on:
   push:
     paths:
-      - '.github/workflows/podman_containers.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_containers.yml'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/modules/podman_containers.py'
-      - 'tests/integration/targets/podman_containers/**'
+      - ".github/workflows/podman_containers.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_containers.yml"
+      - "plugins/modules/podman_container.py"
+      - "plugins/module_utils/podman/podman_container_lib.py"
+      - "plugins/module_utils/podman/common.py"
+      - "plugins/modules/podman_containers.py"
+      - "tests/integration/targets/podman_containers/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_containers.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_containers.yml'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/modules/podman_containers.py'
-      - 'tests/integration/targets/podman_containers/**'
+      - ".github/workflows/podman_containers.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_containers.yml"
+      - "plugins/modules/podman_container.py"
+      - "plugins/module_utils/podman/podman_container_lib.py"
+      - "plugins/module_utils/podman/common.py"
+      - "plugins/modules/podman_containers.py"
+      - "tests/integration/targets/podman_containers/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_containers:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_containers'
-      display_name: 'Podman multi-containers'
+      module_name: "podman_containers"
+      display_name: "Podman multi-containers"
