--- a/.github/workflows/podman_image.yml
+++ b/.github/workflows/podman_image.yml
@@ -3,37 +3,37 @@ name: Podman image
 on:
   push:
     paths:
-      - '.github/workflows/podman_image.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_image.yml'
-      - 'plugins/modules/podman_image.py'
-      - 'plugins/modules/podman_image_info.py'
-      - 'plugins/module_utils/podman/quadlet.py'
-      - 'plugins/module_utils/podman/podman_image_lib.py'
-      - 'tests/integration/targets/podman_image/**'
+      - ".github/workflows/podman_image.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_image.yml"
+      - "plugins/modules/podman_image.py"
+      - "plugins/modules/podman_image_info.py"
+      - "plugins/module_utils/podman/quadlet.py"
+      - "plugins/module_utils/podman/podman_image_lib.py"
+      - "tests/integration/targets/podman_image/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_image.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_image.yml'
-      - 'plugins/modules/podman_image.py'
-      - 'plugins/modules/podman_image_info.py'
-      - 'plugins/module_utils/podman/quadlet.py'
-      - 'plugins/module_utils/podman/podman_image_lib.py'
-      - 'tests/integration/targets/podman_image/**'
+      - ".github/workflows/podman_image.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_image.yml"
+      - "plugins/modules/podman_image.py"
+      - "plugins/modules/podman_image_info.py"
+      - "plugins/module_utils/podman/quadlet.py"
+      - "plugins/module_utils/podman/podman_image_lib.py"
+      - "tests/integration/targets/podman_image/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_image:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_image'
-      display_name: 'Podman image'
-      extra_collections: 'ansible.posix'
+      module_name: "podman_image"
+      display_name: "Podman image"
+      extra_collections: "ansible.posix"
