--- a/.github/workflows/podman_login.yml
+++ b/.github/workflows/podman_login.yml
@@ -3,30 +3,30 @@ name: Podman login
 on:
   push:
     paths:
-      - '.github/workflows/podman_login.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_login.yml'
-      - 'plugins/modules/podman_login.py'
-      - 'tests/integration/targets/podman_login/**'
+      - ".github/workflows/podman_login.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_login.yml"
+      - "plugins/modules/podman_login.py"
+      - "tests/integration/targets/podman_login/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_login.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_login.yml'
-      - 'plugins/modules/podman_login.py'
-      - 'tests/integration/targets/podman_login/**'
+      - ".github/workflows/podman_login.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_login.yml"
+      - "plugins/modules/podman_login.py"
+      - "tests/integration/targets/podman_login/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_login:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_login'
-      display_name: 'Podman login'
+      module_name: "podman_login"
+      display_name: "Podman login"
