--- a/.github/workflows/podman_pod.yml
+++ b/.github/workflows/podman_pod.yml
@@ -3,36 +3,36 @@ name: Podman pod
 on:
   push:
     paths:
-      - '.github/workflows/podman_pod.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_pod.yml'
-      - 'plugins/module_utils/podman/podman_pod_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/module_utils/podman/quadlet.py'
-      - 'plugins/modules/podman_pod.py'
-      - 'plugins/modules/podman_pod_info.py'
-      - 'tests/integration/targets/podman_pod/**'
+      - ".github/workflows/podman_pod.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_pod.yml"
+      - "plugins/module_utils/podman/podman_pod_lib.py"
+      - "plugins/module_utils/podman/common.py"
+      - "plugins/module_utils/podman/quadlet.py"
+      - "plugins/modules/podman_pod.py"
+      - "plugins/modules/podman_pod_info.py"
+      - "tests/integration/targets/podman_pod/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_pod.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_pod.yml'
-      - 'plugins/module_utils/podman/podman_pod_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/module_utils/podman/quadlet.py'
-      - 'plugins/modules/podman_pod.py'
-      - 'plugins/modules/podman_pod_info.py'
-      - 'tests/integration/targets/podman_pod/**'
+      - ".github/workflows/podman_pod.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_pod.yml"
+      - "plugins/module_utils/podman/podman_pod_lib.py"
+      - "plugins/module_utils/podman/common.py"
+      - "plugins/module_utils/podman/quadlet.py"
+      - "plugins/modules/podman_pod.py"
+      - "plugins/modules/podman_pod_info.py"
+      - "tests/integration/targets/podman_pod/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_pod:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_pod'
-      display_name: 'Podman pod'
+      module_name: "podman_pod"
+      display_name: "Podman pod"
