--- a/.github/workflows/podman_secret.yml
+++ b/.github/workflows/podman_secret.yml
@@ -3,33 +3,32 @@ name: Podman secret
 on:
   push:
     paths:
-      - '.github/workflows/podman_secret.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_secret.yml'
-      - 'plugins/modules/podman_secret.py'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
+      - ".github/workflows/podman_secret.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_secret.yml"
+      - "plugins/modules/podman_secret.py"
+      - "plugins/modules/podman_container.py"
+      - "plugins/module_utils/podman/podman_container_lib.py"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_secret.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_secret.yml'
-      - 'plugins/modules/podman_secret.py'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
+      - ".github/workflows/podman_secret.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_secret.yml"
+      - "plugins/modules/podman_secret.py"
+      - "plugins/modules/podman_container.py"
+      - "plugins/module_utils/podman/podman_container_lib.py"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_secret:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_secret'
-      display_name: 'Podman secret'
-
+      module_name: "podman_secret"
+      display_name: "Podman secret"
