--- a/.github/workflows/podman_secret_info.yml
+++ b/.github/workflows/podman_secret_info.yml
@@ -3,30 +3,30 @@ name: Podman secret info
 on:
   push:
     paths:
-      - '.github/workflows/podman_secret_info.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_secret_info.yml'
-      - 'plugins/modules/podman_secret.py'
-      - 'plugins/modules/podman_secret_info.py'
+      - ".github/workflows/podman_secret_info.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_secret_info.yml"
+      - "plugins/modules/podman_secret.py"
+      - "plugins/modules/podman_secret_info.py"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_secret_info.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_secret_info.yml'
-      - 'plugins/modules/podman_secret.py'
-      - 'plugins/modules/podman_secret_info.py'
+      - ".github/workflows/podman_secret_info.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_secret_info.yml"
+      - "plugins/modules/podman_secret.py"
+      - "plugins/modules/podman_secret_info.py"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_secret_info:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_secret_info'
-      display_name: 'Podman secret info'
+      module_name: "podman_secret_info"
+      display_name: "Podman secret info"
