--- a/ci/playbooks/install_repos.yml
+++ b/ci/playbooks/install_repos.yml
@@ -3,8 +3,8 @@
   become: true
   shell: |
     . /etc/os-release
-    echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/xUbuntu_${VERSION_ID}/ /" > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
-    curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/unstable/xUbuntu_${VERSION_ID}/Release.key | apt-key add -
+    echo "deb https://download.opensuse.org/repositories/home:/alvistack/xUbuntu_${VERSION_ID}/ /" > /etc/apt/sources.list.d/home:alvistack.list
+    curl -L https://download.opensuse.org/repositories/home:/alvistack/xUbuntu_${VERSION_ID}/Release.key | apt-key add -
     apt-get update
   when:
     - ansible_distribution|lower == "ubuntu"
@@ -14,8 +14,8 @@
   become: true
   shell: |
     . /etc/os-release
-    echo "deb https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/ /" > /etc/apt/sources.list.d/devel:kubic:libcontainers:stable.list
-    curl -L https://download.opensuse.org/repositories/devel:/kubic:/libcontainers:/stable/xUbuntu_${VERSION_ID}/Release.key | apt-key add -
+    echo "deb https://download.opensuse.org/repositories/home:/alvistack/xUbuntu_${VERSION_ID}/ /" > /etc/apt/sources.list.d/home:alvistack.list
+    curl -L https://download.opensuse.org/repositories/home:/alvistack/xUbuntu_${VERSION_ID}/Release.key | apt-key add -
     apt-get update
   when:
     - ansible_distribution|lower == "ubuntu"
