--- a/.github/workflows/connections_tests.yml
+++ b/.github/workflows/connections_tests.yml
@@ -3,28 +3,28 @@ name: Test connection plugins
 on:
   push:
     paths:
-      - '.github/workflows/connections_tests.yml'
-      - '.github/actions/setup-ansible-collection/action.yml'
-      - 'ci/*.yml'
-      - 'ci/playbooks/connections/**'
-      - 'ci/run_connection_test.sh'
-      - 'plugins/connection/**'
-      - 'tests/integration/targets/connection/**'
-      - 'tests/integration/targets/connection_*/**'
+      - ".github/workflows/connections_tests.yml"
+      - ".github/actions/setup-ansible-collection/action.yml"
+      - ci/playbooks/*.yml
+      - "ci/playbooks/connections/**"
+      - "ci/run_connection_test.sh"
+      - "plugins/connection/**"
+      - "tests/integration/targets/connection/**"
+      - "tests/integration/targets/connection_*/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/connections_tests.yml'
-      - '.github/actions/setup-ansible-collection/action.yml'
-      - 'ci/*.yml'
-      - 'ci/playbooks/connections/**'
-      - 'ci/run_connection_test.sh'
-      - 'plugins/connection/**'
-      - 'tests/integration/targets/connection/**'
-      - 'tests/integration/targets/connection_*/**'
+      - ".github/workflows/connections_tests.yml"
+      - ".github/actions/setup-ansible-collection/action.yml"
+      - ci/playbooks/*.yml
+      - "ci/playbooks/connections/**"
+      - "ci/run_connection_test.sh"
+      - "plugins/connection/**"
+      - "tests/integration/targets/connection/**"
+      - "tests/integration/targets/connection_*/**"
   schedule:
-    - cron: 3 0 * * *  # Run daily at 0:03 UTC
+    - cron: 3 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   build-collection-artifact-connection-tests:
@@ -33,7 +33,7 @@ jobs:
     strategy:
       matrix:
         runner-os:
-          - ubuntu-22.04
+          - ubuntu-24.04
         ansible-version:
           - git+https://github.com/ansible/ansible.git@stable-2.15
         runner-python-version:
@@ -67,10 +67,10 @@ jobs:
           path: .cache/collection-tarballs
 
   test-podman-connection:
-    name: Podman connection VM ${{ matrix.os || 'ubuntu-22.04' }}-${{ matrix.ansible-version }}
+    name: Podman connection VM ${{ matrix.os || 'ubuntu-24.04' }}-${{ matrix.ansible-version }}
     needs:
       - build-collection-artifact-connection-tests
-    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-24.04' }}
     defaults:
       run:
         shell: bash
@@ -81,8 +81,8 @@ jobs:
           - git+https://github.com/ansible/ansible.git@stable-2.18
           - git+https://github.com/ansible/ansible.git@devel
         os:
-          - ubuntu-22.04
-          #- ubuntu-22.04
+          - ubuntu-24.04
+          #- ubuntu-24.04
           #- ubuntu-16.04
           #- macos-latest
         python-version:
@@ -93,7 +93,6 @@ jobs:
           #- 2.7
 
     steps:
-
       - name: Check out repository
         uses: actions/checkout@v6
 
@@ -136,10 +135,10 @@ jobs:
         shell: bash
 
   test-buildah-connection:
-    name: Buildah connection VM ${{ matrix.os || 'ubuntu-22.04' }}-${{ matrix.ansible-version }}
+    name: Buildah connection VM ${{ matrix.os || 'ubuntu-24.04' }}-${{ matrix.ansible-version }}
     needs:
       - build-collection-artifact-connection-tests
-    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-24.04' }}
     defaults:
       run:
         shell: bash
@@ -150,8 +149,8 @@ jobs:
           - git+https://github.com/ansible/ansible.git@stable-2.18
           - git+https://github.com/ansible/ansible.git@devel
         os:
-          - ubuntu-22.04
-          #- ubuntu-22.04
+          - ubuntu-24.04
+          #- ubuntu-24.04
           #- ubuntu-16.04
           #- macos-latest
         python-version:
@@ -162,7 +161,6 @@ jobs:
           #- 2.7
 
     steps:
-
       - name: Check out repository
         uses: actions/checkout@v6
 
@@ -214,7 +212,7 @@ jobs:
     name: Test example playbooks with Podman and Buildah connection plugins
     needs:
       - build-collection-artifact-connection-tests
-    runs-on: ${{ matrix.os || 'ubuntu-22.04' }}
+    runs-on: ${{ matrix.os || 'ubuntu-24.04' }}
     defaults:
       run:
         shell: bash
@@ -226,7 +224,7 @@ jobs:
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-24.04
-          #- ubuntu-22.04
+          #- ubuntu-24.04
           #- ubuntu-16.04
           #- macos-latest
         python-version:
@@ -237,7 +235,6 @@ jobs:
           #- 2.7
 
     steps:
-
       - name: Check out repository
         uses: actions/checkout@v6
 
