--- a/.github/workflows/podman_container_info.yml
+++ b/.github/workflows/podman_container_info.yml
@@ -3,36 +3,36 @@ name: Podman container info
 on:
   push:
     paths:
-      - '.github/workflows/podman_container_info.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_container_info.yml'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/modules/podman_container_info.py'
-      - 'tests/integration/targets/podman_container_info/**'
+      - ".github/workflows/podman_container_info.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_container_info.yml"
+      - "plugins/modules/podman_container.py"
+      - "plugins/module_utils/podman/podman_container_lib.py"
+      - "plugins/module_utils/podman/common.py"
+      - "plugins/modules/podman_container_info.py"
+      - "tests/integration/targets/podman_container_info/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_container_info.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_container_info.yml'
-      - 'plugins/modules/podman_container.py'
-      - 'plugins/module_utils/podman/podman_container_lib.py'
-      - 'plugins/module_utils/podman/common.py'
-      - 'plugins/modules/podman_container_info.py'
-      - 'tests/integration/targets/podman_container_info/**'
+      - ".github/workflows/podman_container_info.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_container_info.yml"
+      - "plugins/modules/podman_container.py"
+      - "plugins/module_utils/podman/podman_container_lib.py"
+      - "plugins/module_utils/podman/common.py"
+      - "plugins/modules/podman_container_info.py"
+      - "tests/integration/targets/podman_container_info/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_container_info:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_container_info'
-      display_name: 'Podman container info'
+      module_name: "podman_container_info"
+      display_name: "Podman container info"
