--- a/.github/workflows/podman_network_info.yml
+++ b/.github/workflows/podman_network_info.yml
@@ -3,30 +3,30 @@ name: Podman network info
 on:
   push:
     paths:
-      - '.github/workflows/podman_network_info.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_network_info.yml'
-      - 'plugins/modules/podman_network_info.py'
-      - 'tests/integration/targets/podman_network_info/**'
+      - ".github/workflows/podman_network_info.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_network_info.yml"
+      - "plugins/modules/podman_network_info.py"
+      - "tests/integration/targets/podman_network_info/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_network_info.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_network_info.yml'
-      - 'plugins/modules/podman_network_info.py'
-      - 'tests/integration/targets/podman_network_info/**'
+      - ".github/workflows/podman_network_info.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_network_info.yml"
+      - "plugins/modules/podman_network_info.py"
+      - "tests/integration/targets/podman_network_info/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_network_info:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_network_info'
-      display_name: 'Podman network info'
+      module_name: "podman_network_info"
+      display_name: "Podman network info"
