--- a/.github/workflows/podman_search.yml
+++ b/.github/workflows/podman_search.yml
@@ -3,30 +3,30 @@ name: Podman search
 on:
   push:
     paths:
-      - '.github/workflows/podman_search.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_search.yml'
-      - 'plugins/modules/podman_search.py'
-      - 'tests/integration/targets/podman_search/**'
+      - ".github/workflows/podman_search.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_search.yml"
+      - "plugins/modules/podman_search.py"
+      - "tests/integration/targets/podman_search/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_search.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_search.yml'
-      - 'plugins/modules/podman_search.py'
-      - 'tests/integration/targets/podman_search/**'
+      - ".github/workflows/podman_search.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_search.yml"
+      - "plugins/modules/podman_search.py"
+      - "tests/integration/targets/podman_search/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_search:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_search'
-      display_name: 'Podman search'
+      module_name: "podman_search"
+      display_name: "Podman search"
