--- a/.github/workflows/podman_tag.yml
+++ b/.github/workflows/podman_tag.yml
@@ -3,30 +3,30 @@ name: Podman tag
 on:
   push:
     paths:
-      - '.github/workflows/podman_tag.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_tag.yml'
-      - 'plugins/modules/podman_tag.py'
-      - 'tests/integration/targets/podman_tag/**'
+      - ".github/workflows/podman_tag.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_tag.yml"
+      - "plugins/modules/podman_tag.py"
+      - "tests/integration/targets/podman_tag/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_tag.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_tag.yml'
-      - 'plugins/modules/podman_tag.py'
-      - 'tests/integration/targets/podman_tag/**'
+      - ".github/workflows/podman_tag.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_tag.yml"
+      - "plugins/modules/podman_tag.py"
+      - "tests/integration/targets/podman_tag/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_tag:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_tag'
-      display_name: 'Podman tag'
+      module_name: "podman_tag"
+      display_name: "Podman tag"
