--- a/.github/workflows/podman_volume.yml
+++ b/.github/workflows/podman_volume.yml
@@ -3,32 +3,32 @@ name: Podman volume
 on:
   push:
     paths:
-      - '.github/workflows/podman_volume.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_volume.yml'
-      - 'plugins/modules/podman_volume.py'
-      - 'plugins/module_utils/podman/quadlet.py'
-      - 'tests/integration/targets/podman_volume/**'
+      - ".github/workflows/podman_volume.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_volume.yml"
+      - "plugins/modules/podman_volume.py"
+      - "plugins/module_utils/podman/quadlet.py"
+      - "tests/integration/targets/podman_volume/**"
     branches:
       - main
   pull_request:
     paths:
-      - '.github/workflows/podman_volume.yml'
-      - '.github/workflows/reusable-module-test.yml'
-      - 'ci/*.yml'
-      - 'ci/run_containers_tests.sh'
-      - 'ci/playbooks/containers/podman_volume.yml'
-      - 'plugins/modules/podman_volume.py'
-      - 'plugins/module_utils/podman/quadlet.py'
-      - 'tests/integration/targets/podman_volume/**'
+      - ".github/workflows/podman_volume.yml"
+      - ".github/workflows/reusable-module-test.yml"
+      - ci/playbooks/*.yml
+      - "ci/run_containers_tests.sh"
+      - "ci/playbooks/containers/podman_volume.yml"
+      - "plugins/modules/podman_volume.py"
+      - "plugins/module_utils/podman/quadlet.py"
+      - "tests/integration/targets/podman_volume/**"
   schedule:
-    - cron: 4 0 * * *  # Run daily at 0:03 UTC
+    - cron: 4 0 * * * # Run daily at 0:03 UTC
 
 jobs:
   test_podman_volume:
     uses: ./.github/workflows/reusable-module-test.yml
     with:
-      module_name: 'podman_volume'
-      display_name: 'Podman volume'
+      module_name: "podman_volume"
+      display_name: "Podman volume"
